--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,10 @@
-$lightGrey: #DCE1E3;
-$grey: #5C5F58;
-$blue: #004E7C;
-$white: #FFF;
-$black: #000;
-$fadedGrey: rgba(230, 227, 227, .4);
-$paragraphColor: #dedede;
+$white: #FFFFFF;
+$black: #000000;
+
+//primary colors
+$orange: #BC4123;
+$blue: #0B172A;
+$grey: #463940;
+
+$headerColor: $white;
+$paragraphColor: $grey;
