--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -5,7 +5,7 @@
     scroll-behavior: smooth;
     text-decoration: none;
     list-style: none;
-    color: $black;
+    color: $white;
     font-family: 'Catamaran', sans-serif;
 }
 
@@ -17,11 +17,39 @@ body {
     overflow-x: hidden;
 }
 
-.divider {
-    width: 100%;
-    height: 2px;
-    background-color: $fadedGrey;
-    margin: 1rem 0;
+.hamburger__btn {
+    display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 5px;
+        cursor: pointer;
+
+        > span {
+            background-color: $black;
+            width: 30px;
+            height: 3px;
+            transform-origin: left;
+            transition: all 150ms ease;
+        }
+
+        > span:nth-child(2) {
+            transform: scaleX(.5);
+            transform-origin: right;
+        }
+
+        &.active {
+            > span:nth-child(1) {
+                transform: rotate(45deg) translateY(-4px);
+            }
+
+            > span:nth-child(2) {
+                opacity: 0;
+            }
+
+            > span:nth-child(3) {
+                transform: rotate(-45deg) translateY(4px);
+            }
+        }
 }
 
 .padding {
@@ -41,24 +69,79 @@ body {
     }
 
     &__t {
-        padding-top: 2rem;
+        &L {
+            padding-top: 2rem;
+        }
+
+        &M {
+            padding-top: 1rem;
+        }
+
+        &S {
+            padding-top: 0.5rem;
+        }
     }
 
     &__b {
-        padding-bottom: 2rem;
+        &L {
+            padding-bottom: 2rem;
+        }
+
+        &M {
+            padding-bottom: 1rem;
+        }
+
+        &S {
+            padding-bottom: 0.5rem;
+        }
     }
 
     &__r {
-        padding-right: 2rem;
+        &L {
+            padding-right: 2rem;
+        }
+
+        &M {
+            padding-right: 1rem;
+        }
+
+        &S {
+            padding-right: 0.5em;
+        }
     }
 
     &__l {
         padding-left: 2rem;
+
+        &L {
+
+        }
+
+        &M {
+
+        }
+
+        &S {
+
+        }
     }
 
     &__s {
-        padding-left: 2rem;
-        padding-right: 2rem;
+
+        &L {
+            padding-left: 2rem;
+            padding-right: 2rem;
+        }
+
+        &M {
+            padding-left: 1rem;
+            padding-right: 1rem;
+        }
+
+        &S {
+            padding-left: 0.5rem;
+            padding-right: 0.5rem;
+        }
     }
 
     &__u {
@@ -82,13 +165,16 @@ body {
 
 .container {
 
-
     &__L {
         max-width: 150rem;
     }
 
     &__M {
         max-width: 100rem;
+    }
+
+    &__S {
+        max-width: 50rem;
     }
 }
 
