--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,113 +1,67 @@
 .header {
-    background-color: $lightGrey;
-    width: 100vw;
-    height: 8rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     position: fixed;
-    z-index: 998;
-    transition: background-color 300ms ease, box-shadow 300ms ease, height 150ms ease;
-
-    &.fixed {
-        background-color: $white;
-        box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.05);
-
-        @include breakpoint-up(large) {
-            height: 6rem
-        }
-    }
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: auto;
+    background-color: $blue;
 
     &__nav {
+        height: 5rem;
         width: 100%;
-        height: 100%;
         display: flex;
         align-items: center;
     }
 
     &__list {
         display: flex;
-        justify-content: space-between;
         align-items: center;
+        justify-content:flex-end;
+        gap: 20px;
         width: 100%;
-        height: 100%;
+    }
 
-        &__left {
-            font-size: 2.5rem;
+    &__logo {
+        flex: 1;
+
+        > a {
+            font-size: 2rem;
             font-weight: bold;
-
-            @include breakpoint-down(small) {
-                font-size: clamp(1rem, 05vw, 1.5rem);
-            }
-            
-            > a {
-                color: $blue;
-            }
-        }
-
-        &__right {
-            > ul {
-                display: flex;
-                gap: 20px;
-
-                > li {
-                    position: relative;
-
-                    &::before {
-                        content: '';
-                        position: absolute;
-                        height: 2px;
-                        background-color: $blue;
-                        bottom: 0;
-                        width: 100%;
-                        transform: scaleX(0);
-                        transform-origin: right;
-                        transition: transform 350ms ease;
-                    }
-
-                    &:hover {
-                        &::before {
-                            transform-origin: left;
-                            transform: scaleX(1);
-                        }
-                    }
-                }
-            }
         }
     }
 
-    &__menuBtn {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        cursor: pointer;
-        z-index: 1;
-        gap: 5px;
+    &__link {
+        flex: .1;
 
-        > span {
-            background-color: $black;
-            width: 30px;
-            height: 3px;
-            transform-origin: left;
-            transition: all 150ms ease;
-        }
+        &__text {
+            position: relative;
+            font-size: 1.105rem;
 
-        > span:nth-child(2) {
-            transform: scaleX(.5);
-            transform-origin: right;
-        }
+            &.current__page {
 
-        &.active {
-            > span:nth-child(1) {
-                transform: rotate(45deg) translateY(-4px);
+                &::before {
+                    transform: scaleX(1);
+                    transition: none;
+                }
             }
 
-            > span:nth-child(2) {
-                opacity: 0;
+            &::before {
+                content: '';
+                position: absolute;
+                bottom: 0;
+                width: 100%;
+                height: 3px;
+                background-color: $orange;
+                transform-origin: right;
+                transform: scaleX(0);
+                transition: transform 300ms ease;
             }
 
-            > span:nth-child(3) {
-                transform: rotate(-45deg) translateY(4px);
+            &:hover {
+                &::before {
+                    transform-origin: left;
+                    transform: scaleX(1);
+                }
             }
         }
     }
