--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -1,5 +1,35 @@
 .home {
-
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     width: 100%;
     height: 100%;
+    min-height: 100vh;
+
+    > div {
+        width: 100%;
+    }
+
+    &__title {
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: 20px;
+        justify-content: center;
+        width: 100%;
+        text-align: center;
+        font-size: 4rem;
+        margin-top: 5rem;
+        margin-bottom: 10rem;
+
+        > span:nth-child(2) {
+            color: $orange;
+            font-weight: bold;
+        }
+    }
+
+    &__about {
+        background-color: $grey;
+        height: 30rem;
+        width: 100%;
+    }
 }
