updated responsiveness and aded focus

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -7,7 +7,7 @@
         color: $black;
         font-weight: bold;
 
-        &:hover {
+        &:hover, &:focus {
             filter: brightness(1.25);
         }
     }
