--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,7 +4,11 @@ $black: #000000;
 //primary colors
 $orange: #BC4123;
 $blue: #0B172A;
-$grey: #463940;
+$lighterBlue: #0f1b2e;
+$grey: #6e6d6d;
+
+//rgba colors
+$fadedGrey: rgba(110, 109, 109, 0.2);
 
 $headerColor: $white;
 $paragraphColor: $grey;
