--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -7,49 +7,47 @@
     list-style: none;
     color: $white;
     font-family: 'Catamaran', sans-serif;
+    outline: none;
+    border: none;
 }
 
 html {
     font-size: 100%;
 }
 
-body {
-    overflow-x: hidden;
-}
-
 .hamburger__btn {
     display: flex;
-        flex-direction: column;
-        justify-content: center;
-        gap: 5px;
-        cursor: pointer;
+    flex-direction: column;
+    justify-content: center;
+    gap: 5px;
+    cursor: pointer;
 
-        > span {
-            background-color: $black;
-            width: 30px;
-            height: 3px;
-            transform-origin: left;
-            transition: all 150ms ease;
+    > span {
+        background-color: $black;
+        width: 30px;
+        height: 3px;
+        transform-origin: left;
+        transition: all 150ms ease;
+    }
+
+    > span:nth-child(2) {
+        transform: scaleX(.5);
+        transform-origin: right;
+    }
+
+    &.active {
+        > span:nth-child(1) {
+            transform: rotate(45deg) translateY(-4px);
         }
 
         > span:nth-child(2) {
-            transform: scaleX(.5);
-            transform-origin: right;
+            opacity: 0;
         }
 
-        &.active {
-            > span:nth-child(1) {
-                transform: rotate(45deg) translateY(-4px);
-            }
-
-            > span:nth-child(2) {
-                opacity: 0;
-            }
-
-            > span:nth-child(3) {
-                transform: rotate(-45deg) translateY(4px);
-            }
+        > span:nth-child(3) {
+            transform: rotate(-45deg) translateY(4px);
         }
+    }
 }
 
 .padding {
