--- a/src/scss/_sidebar.scss
+++ b/src/scss/_sidebar.scss
@@ -1,14 +1,66 @@
 .sidebar {
-    position: absolute;
+    position: fixed;
     height: 100vh;
-    width: 100vw;
-    transform: scaleX(0);
+    width: 50vw;
+    right: -100vw;
     transform-origin: right;
     background-color: $white;
     z-index: 999;
-    transition: transform 300ms ease;
+    transition: right 300ms ease, box-shadow 300ms ease;
 
     &.open {
-        transform: scaleX(1);
+        right: 0;
+        box-shadow: -5px 10px 15px rgba(0 , 0, 0, 0.2);
+    }
+
+    &__background {
+        position: absolute;
+        display: none;
+        background-color: $black;
+        opacity: .2;
+        height: 100vh;
+        left: -300%;
+        top: 0;
+        width: 300%;
+        z-index: -1;
+
+        &.open {
+            display: block;
+        }
+    }
+
+    &__list {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        align-items: center;
+        justify-content: space-between;
+        padding: 2rem 0;
+        width: 100%;
+        height: calc(100% - 20rem);
+        z-index: 1;
+    }
+
+    &__links {
+        width: 100%;
+        display: flex;
+        align-items: center;
+
+        > a {
+            width: 100%;
+            text-align: center;
+            color: $black;
+            font-size: 1.25rem;
+
+            &:hover {
+                background-color: $fadedGrey;
+            }
+
+            &.sidebar__current__page {
+                color: $orange;
+                font-weight: bold;
+            }
+        }
     }
 }
+
