--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,12 +3,14 @@ $black: #000000;
 
 //primary colors
 $orange: #BC4123;
+$lighterOrange: #e34f2b;
 $blue: #0B172A;
 $lighterBlue: #0f1b2e;
 $grey: #6e6d6d;
 
 //rgba colors
 $fadedGrey: rgba(110, 109, 109, 0.2);
+$fadedBlack: rgba(0, 0, 0, 0.2);
 
 $headerColor: $white;
-$paragraphColor: $grey;
+$paragraphColor: #adacac;
