--- a/src/scss/_banner.scss
+++ b/src/scss/_banner.scss
@@ -27,7 +27,7 @@
 
     &__subtext {
         flex: 1;
-        color: $paragraphColor;
+        color: $grey;
         font-size: 1rem;
         line-height: 1.5;
     }
