--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -8,7 +8,7 @@
         font-weight: bold;
 
         &:hover, &:focus {
-            filter: brightness(1.25);
+            background-color: $lighterOrange
         }
     }
 }
