--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -1,14 +1,16 @@
 .app {
     height: 100vh;
+    width: 100vw;
     min-height: max-content;
 }
 
 .screen {
     display: flex;
     justify-content: center;
-    width: 100vw;
+    width: 100%;
     height: max-content;
     min-height: 800px;
     background-color: $blue;
     padding-top: 7rem;
+
 }
