--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -2,16 +2,17 @@
     position: fixed;
     display: flex;
     justify-content: center;
-    width: 100%;
+    width: 100vw;
     height: auto;
     background-color: $blue;
     z-index: 999;
 
     &__nav {
         height: 5rem;
-        width: 100%;
+        width: fill;
         display: flex;
         align-items: center;
+        margin: 2rem;
     }
 
     &__list {
@@ -20,6 +21,7 @@
         justify-content:flex-end;
         gap: 20px;
         width: 100%;
+ 
     }
 
     &__logo {
