--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -1,10 +1,8 @@
 .home {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
     width: 100%;
-    height: 100%;
-    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     > div {
         width: 100%;
@@ -15,15 +13,11 @@
         flex-wrap: wrap;
         column-gap: 5px;
         justify-content: center;
-        width: 100%;
+        margin: 2rem;
         text-align: center;
         font-size: clamp(1.5rem, 5vw, 4rem);
         margin-top: 5rem;
         margin-bottom: 10rem;
-
-        @include breakpoint-down(medium) {
-
-        }
 
         > span:nth-child(2) {
             color: $orange;
@@ -41,12 +35,14 @@
         padding: 5rem 0;
 
         &__list {
+            margin: 2rem;
             display: flex;
-            width: 100%;
-            gap: 10px;
+            gap: 20px;
+
 
             @include breakpoint-down(medium) {
                 flex-direction: column;
+                overflow-x: hidden;
             }
         }
 
@@ -64,7 +60,6 @@
             @include breakpoint-down(medium) {
                 height: clamp(500px, 100vw, 800px);
                 width: 90%;
-                min-width: 250px;
                 margin: auto;
             }
         }
@@ -74,7 +69,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            width: 100%;
+            width: fill;
             height: 100%;
             background-color: $fadedBlack;
         }
