--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -11,6 +11,7 @@ $grey: #6e6d6d;
 //rgba colors
 $fadedGrey: rgba(110, 109, 109, 0.2);
 $fadedBlack: rgba(0, 0, 0, 0.2);
+$fadedBlue: rgba(11, 23, 42, 0.95);
 
 $headerColor: $white;
 $paragraphColor: #adacac;
