--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     width: 100vw;
     height: auto;
-    background-color: $blue;
+    background-color: $fadedBlue;
     z-index: 999;
 
     &__nav {
