--- a/src/scss/_sidebar.scss
+++ b/src/scss/_sidebar.scss
@@ -35,10 +35,15 @@
         gap: 20px;
         align-items: center;
         justify-content: space-between;
-        padding: 2rem 0;
-        width: 100%;
+        width: 90%;
         height: calc(100% - 20rem);
         z-index: 1;
+        padding: 2rem 0;
+        margin: auto;
+    }
+    
+    &__btn {
+        width: 100%;
     }
 
     &__links {
@@ -50,6 +55,7 @@
             width: 100%;
             text-align: center;
             color: $black;
+            padding: 1rem 0;
             font-size: 1.25rem;
 
             &:hover, &:focus {
