--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -4,8 +4,10 @@
     flex-direction: column;
     align-items: center;
 
+
     > div {
         width: 100%;
+        
     }
 
     &__title {
@@ -13,11 +15,11 @@
         flex-wrap: wrap;
         column-gap: 5px;
         justify-content: center;
-        margin: 2rem;
+        height: max-content;
         text-align: center;
         font-size: clamp(1.5rem, 5vw, 4rem);
-        margin-top: 5rem;
-        margin-bottom: 5rem;
+        padding: 5rem 0;
+        background-color: $blue;
 
         > span:nth-child(2) {
             color: $orange;
